--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,21 @@
   <ng-template #id_selector>
     <h3>Status:false</h3>
   </ng-template>
+
+  <hr>
+  <h2>ngFor with index</h2>
+  <ul>
+    <li *ngFor="let item of itemList;let i=index;">
+      <b>{{i+1}}</b> {{item.name}} {{item.surname}}
+    </li>
+  </ul>
+
+  <hr>
+  <h2>ngSwitch</h2>
+  <div [ngSwitch]="'uc'">
+    
+    <h3 *ngSwitchCase="'bir'">Degisken bire esit</h3>
+    <h3 *ngSwitchCase="'iki'">Degisken ikiye esit</h3>
+    <h3 *ngSwitchDefault>Degisken ne bir ne iki</h3>
+  </div>
 </div>
-<hr>
-<h2>ngFor with index</h2>
-<ul>
-  <li *ngFor="let item of itemList;let i=index;">
-    <b>{{i+1}}</b> {{item.name}} {{item.surname}}
-  </li>
-</ul>
