--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container mt-5">
+  <hr>
+  <h2>My Directive</h2>
+  <button class="my-3 btn" appButtonColor>Meine eigene Directive</button>
+
   <h1>Directives</h1>
   <hr>
   <h3 *ngIf="!status">ngIf Calismiyor</h3>
@@ -29,4 +33,6 @@
     <h3 *ngSwitchCase="'iki'">Degisken ikiye esit</h3>
     <h3 *ngSwitchDefault>Degisken ne bir ne iki</h3>
   </div>
+
+ 
 </div>
